# bevy_mod_aseprite

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
assets/: player.ase
derive/: Cargo.toml
derive/src/: lib.rs
examples/: aseprite.rs
src/: anim.rs  error.rs  info.rs  lib.rs  loader.rs  plugin.rs
