[package]
name = "bevy_mod_aseprite"
version = "0.10.0"
edition = "2024"
description = "A plugin for using Aseprite animations in Bevy"
repository = "https://github.com/lerouxrgd/bevy_mod_aseprite"
license = "MIT OR Apache-2.0"
exclude = ["assets/"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_asset",
  "bevy_sprite",
  "bevy_log",
] }
bevy_internal = { version = "0.16", default-features = false, features = [
  "bevy_image",
] }
bevy_aseprite_derive = "0.3"
bevy_aseprite_reader = "0.1"

[dev-dependencies]
bevy = "0.16"
