[package]
name = "bevy_mod_aseprite"
version = "0.12.0"
edition = "2024"
description = "A plugin for using Aseprite animations in Bevy"
repository = "https://github.com/lerouxrgd/bevy_mod_aseprite"
license = "MIT OR Apache-2.0"
exclude = ["assets/"]

[dependencies]
aseprite-loader = "0.4"
bevy = { version = "0.17", default-features = false, features = [
  "bevy_log",
  "bevy_render",
  "bevy_sprite",
] }
bevy_aseprite_derive = "0.3"

[dev-dependencies]
bevy = "0.17"
