[package]
name = "bevy_mod_aseprite"
version = "0.14.0"
edition = "2024"
description = "A plugin for using Aseprite animations in Bevy"
repository = "https://github.com/lerouxrgd/bevy_mod_aseprite"
license = "MIT OR Apache-2.0"
exclude = ["assets/"]

[workspace]
members = ["derive"]

[dependencies]
aseprite-loader = "0.4"
bevy = { version = "0.18", default-features = false, features = [
  "bevy_log",
  "bevy_render",
  "bevy_sprite",
] }
bevy_mod_aseprite_derive = { path = "./derive", version = "0.1" }

[dev-dependencies]
bevy = { version = "0.18", features = ["bevy_state"] }
